--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Scissors & Style </title>
-  <link rel="icon" href="/src/assets/logo.png" />
+  <link rel="icon" href="/src/assets/header/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
